# RTCS_Kursovaya

./: .gitignore  Cargo.toml  Readme.md
src/: data_checking.rs  data_types.rs  inner_logic.rs  main.rs  networking.rs  sensors_data_generation.rs
