[package]
name = "kursovaya"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
rand = "0.8.5"
serde_json = "1.0.80"
serde = {version = "1.0.137", features = ["derive"]}
reqwest = { version = "0.11.10", features = ["blocking"] }